Commit of file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/10_Integris Main Topics/3A_2000/b.Connecting_2k.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/10_Integris Main Topics/3A_2000/b2.Starting Integris 2000.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/10_Integris Main Topics/3A_2000/b4.Troubleshooting.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/10_Integris Main Topics/3A_2000/c1.Set Link Rate.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/10_Integris Main Topics/3A_2000/c2.Load Config File.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/20_Safety & Compliance/a.Legal.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/20_Safety & Compliance/b.Regulatory.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/20_Safety & Compliance/c.Safety & Compliance.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/20_Safety & Compliance/d.Environmental.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/20_Safety & Compliance/f.Tech Support & Calibration.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/20_Safety & Compliance/h.Unpacking & Setting Up.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/20_Safety & Compliance/h2.Setting Up.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/

--- a/Content/10_Integris Main Topics/3A_2000/b.Connecting_2k.htm
+++ b/Content/10_Integris Main Topics/3A_2000/b.Connecting_2k.htm
@@ -77,9 +77,7 @@
         <p><b>Cable Testing</b>: Connect one end of the duplex cable to Integris test port 1 and fit a loopback to the other end of the cable. 
 			Run the <b>Cable</b> test sequence.<MadCap:conditionalText MadCap:conditions="Default.Print"><![CDATA[ 
 		
-		]]><MadCap:xref href="../../02_Main Topics/3A_2000/e.Tests-Cable.htm" class="IndexPageNumber">See "Testing a Cable", page 1</MadCap:xref></MadCap:conditionalText><MadCap:xref href="../../02_Main Topics/3A_2000/b.Connecting_2k.htm" class="IndexPageNumber"><![CDATA[
-				
-			]]></MadCap:xref><MadCap:conditionalText MadCap:conditions="Default.Screen"><MadCap:xref href="../../02_Main Topics/3A_2000/b.Connecting_2k.htm" class="IndexPageNumber">(See </MadCap:xref><MadCap:xref href="../../02_Main Topics/3A_2000/e.Tests-Cable.htm">Testing a Cable</MadCap:xref>)</MadCap:conditionalText></p>
+		]]></MadCap:conditionalText><MadCap:conditionalText MadCap:conditions="Default.Screen">)</MadCap:conditionalText></p>
         <table style="width: 100%;margin-left: 0;margin-right: auto;mc-table-style: url('../../Resources/Table Stylesheets/Image&amp;LabelStyle01.css');" class="TableStyle-Image_&amp;_LabelStyle01" cellspacing="0">
             <col class="TableStyle-Image_&amp;_LabelStyle01-Column-Column1" />
             <tbody>
@@ -97,9 +95,7 @@
         </table>
         <p><b>SFP&#160;Testing</b>: Remove the SFP&#160;that is fitted to the Integris test port 1  and replace it with the SFP to be tested. Insert a loopback cable into the SFP, then run the <i style="font-weight: bold; font-style: normal;">SFP</i>&#160;test sequence. e.<MadCap:conditionalText MadCap:conditions="Default.Print"><![CDATA[ 
 		
-		]]><MadCap:xref href="../../02_Main Topics/3A_2000/f.Tests-SFP.htm" class="IndexPageNumber">See "Testing an SFP", page 1</MadCap:xref></MadCap:conditionalText><MadCap:xref href="../../02_Main Topics/3A_2000/b.Connecting_2k.htm" class="IndexPageNumber"><![CDATA[
-				
-			]]></MadCap:xref><MadCap:conditionalText MadCap:conditions="Default.Screen"><MadCap:xref href="../../02_Main Topics/3A_2000/b.Connecting_2k.htm" class="IndexPageNumber">(See </MadCap:xref><MadCap:xref href="../../02_Main Topics/3A_2000/f.Tests-SFP.htm">Testing an SFP</MadCap:xref>)</MadCap:conditionalText></p>
+		]]></MadCap:conditionalText><MadCap:conditionalText MadCap:conditions="Default.Screen">)</MadCap:conditionalText></p>
         <table style="width: 100%;margin-left: 0;margin-right: auto;mc-table-style: url('../../Resources/Table Stylesheets/Image&amp;LabelStyle01.css');" class="TableStyle-Image_&amp;_LabelStyle01" cellspacing="0">
             <col class="TableStyle-Image_&amp;_LabelStyle01-Column-Column1" />
             <tbody>
