--- a/Content/20_Safety & Compliance/x.App1-Troubleshooting.htm
+++ b/Content/20_Safety & Compliance/x.App1-Troubleshooting.htm
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1 class="AA_h1_Appendix" MadCap:autonum="Appendix A: ">Troubleshooting</h1>
-        <h2 MadCap:conditions="General.Online">Troubleshooting</h2>
+        <h2>Troubleshooting</h2>
         <p>Here are helpful hints to follow before you take further actions when you encounter any problem:</p>
         <ul>
             <li>Try to isolate which part of the computer is causing the problem.</li>
@@ -16,8 +16,8 @@
             <li>Make notes of your observations. Are there any messages on the screen? Do any indicators light? Do you hear any beeps? Detailed descriptions are useful to the service personnel when you need to consult one for assistance.</li>
         </ul>
         <p>If any problem persists after you follow the instructions in this section, contact Absolute Analysis support staff for help at <MadCap:variable name="AA_DOC_Vars.WebAddressSupport" /></p>
-        <h2 class="AA_h2_ChandPara" MadCap:conditions="General.PDF" MadCap:autonum="1.1. ">Battery Problems</h2>
-        <h2 MadCap:conditions="General.Online">Solving Battery Problems</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. ">Battery Problems</h2>
+        <h2>Solving Battery Problems</h2>
         <p>The battery does not charge (Battery Charge indicator does not light amber).</p>
         <ul>
             <li>Make sure that the AC adapter is properly connected.</li>
@@ -26,15 +26,15 @@
             <li>Make sure that the battery pack is installed correctly.</li>
             <li>Make sure that the battery terminals are clean. The operating time of a fully charged battery becomes shorter.</li>
         </ul>
-        <h2 class="AA_h2_ChandPara" MadCap:conditions="General.PDF" MadCap:autonum="1.2. ">Display Problems</h2>
-        <h2 MadCap:conditions="General.Online">Display Problems</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.2. ">Display Problems</h2>
+        <h2>Display Problems</h2>
         <p><b>Nothing appears on the screen</b>
         </p>
         <p>During operation, the screen may automatically turn off as a result of power management. Press any key to see if the screen comes back.</p>
         <p>The brightness level might be too low. Increase the brightness.</p>
         <p>The display output might be set to an external device. To switch the display back to the LCD, press the Fn+F9 hot key or change the display through the Display Settings Properties.</p>
-        <h2 class="AA_h2_ChandPara" MadCap:conditions="General.PDF" MadCap:autonum="1.3. ">LAN Problems</h2>
-        <h2 MadCap:conditions="General.Online">LAN Problems</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.3. ">LAN Problems</h2>
+        <h2>LAN Problems</h2>
         <p><b>I cannot access the network.</b>
         </p>
         <ul>
@@ -42,8 +42,8 @@
             <li>Make sure that the network configuration is appropriate.</li>
             <li>Make sure that the user name or password is correct.</li>
         </ul>
-        <h2 class="AA_h2_ChandPara" MadCap:conditions="General.PDF" MadCap:autonum="1.4. ">Startup Problems</h2>
-        <h2 MadCap:conditions="General.Online">Startup Problems</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.4. ">Startup Problems</h2>
+        <h2>Startup Problems</h2>
         <p><b>When you turn on the computer, it does not seem to respond.</b>
         </p>
         <p>Make sure that either the AC adapter is connected or the battery has power.</p>
@@ -52,8 +52,8 @@
         <p><b>When you turn on the computer, it stops after POST.</b>
         </p>
         <p>Reset the system (see "Resetting the Computer" below).</p>
-        <h2 class="AA_h2_ChandPara" MadCap:conditions="General.PDF" MadCap:autonum="1.5. ">WLAN Problems</h2>
-        <h2 MadCap:conditions="General.Online">WLAN Problems</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.5. ">WLAN Problems</h2>
+        <h2>WLAN Problems</h2>
         <p><b>I cannot use the WLAN feature.</b>
         </p>
         <p>Make sure that the WLAN feature is turned on. </p>
@@ -84,8 +84,8 @@
         <p>Make sure that the user name or password is correct.</p>
         <p>You have moved out of range of the network.</p>
         <p>Turn off power management.</p>
-        <h2 class="AA_h2_ChandPara" MadCap:conditions="General.PDF" MadCap:autonum="1.6. ">Resetting the Computer</h2>
-        <h2 MadCap:conditions="General.Online">Resetting the Computer</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.6. ">Resetting the Computer</h2>
+        <h2>Resetting the Computer</h2>
         <p>You may have to reset (reboot) your computer on some occasions when an error occurs and the program you are using hangs up.</p>
         <p>If you are sure the operation has stopped and you cannot use the “restart” function of the operating system, reset the computer</p>
         <p>Reset the computer by any of these methods:</p>
@@ -93,8 +93,8 @@
             <li>Press Ctrl+Alt+Del on the keyboard. This opens the Ctrl-Alt-Del screen where you can select actions including Restart.</li>
             <li>If the above action does not work, press and hold the power button for more than 5 seconds to force the system to turn off. Then turn on the power again.</li>
         </ul>
-        <h2 class="AA_h2_ChandPara" MadCap:conditions="General.PDF" MadCap:autonum="1.7. ">System Restore</h2>
-        <h2 MadCap:conditions="General.Online">System Restore</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.7. ">System Restore</h2>
+        <h2>System Restore</h2>
         <p>Use System Restore when you want the Windows 7 operating system to be returned to the factory state.</p>
         <table style="border-top-left-radius: 5px;border-top-right-radius: 5px;border-bottom-right-radius: 5px;border-bottom-left-radius: 5px;border-left-style: solid;border-left-width: 1px;border-left-color: ;border-right-style: solid;border-right-width: 1px;border-right-color: ;border-top-style: solid;border-top-width: 1px;border-top-color: ;border-bottom-style: solid;border-bottom-width: 1px;border-bottom-color: ;margin-left: auto;margin-right: auto;">
             <col style="width: 100%;" />
