--- a/Content/10_Integris Main Topics/3A_2000/b2.Starting Integris 2000.htm
+++ b/Content/10_Integris Main Topics/3A_2000/b2.Starting Integris 2000.htm
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="604" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="648" MadCap:lastWidth="624">
     <head>
         <link href="../../Resources/Table Stylesheets/NoteBoxStyle01.css" rel="stylesheet" MadCap:stylesheetType="table" />
     </head>
@@ -14,13 +14,25 @@
             <tbody>
                 <tr class="TableStyle-NoteBoxStyle01-Body-Body1">
                     <td class="TableStyle-NoteBoxStyle01-BodyA-Column1-Body1">
-                        <p><b>NOTE:</b> The Integris 2000 application 'remembers' the last test run on the system and will display this when the GUI opens.                </p>
+                        <p><b>NOTE:</b> The Integris 2000 application 'remembers' the last test run on the system and will display the same screen when the GUI opens.                </p>
                     </td>
                 </tr>
             </tbody>
         </table>
-        <p style="text-align: center;">
-            <img src="../../Resources/Images/2k_Blank-GUI.jpg" MadCap:mediastyle="@media print { height: auto;width: 300px; }" style="mc-float: center;width: 300px;" />
-        </p>
+        <table style="width: 100%;" class="FigureTable">
+            <col />
+            <tbody>
+                <tr>
+                    <td style="text-align: center;">
+                        <img src="../../Resources/Images/2k_Blank-GUI.jpg" MadCap:mediastyle="@media print { height: auto;width: 300px; }" style="margin-top: 10px;margin-bottom: 10px;height: auto;width: 300px;" />
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p class="FigNum01" MadCap:autonum=" Fig 1.1 ">Connecting <i>Integris 2000</i> to an RRH</p>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </body>
 </html>
