--- a/Content/10_Integris Main Topics/3A_2000/c1.Set Link Rate.htm
+++ b/Content/10_Integris Main Topics/3A_2000/c1.Set Link Rate.htm
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="855" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="819" MadCap:lastWidth="624">
     <head>
         <link href="../../Resources/Table Stylesheets/Image&amp;LabelStyle01.css" rel="stylesheet" MadCap:stylesheetType="table" />
         <link href="../../Resources/Table Stylesheets/ShadedRowStyle01.css" rel="stylesheet" MadCap:stylesheetType="table" />
         <link href="../Resources/Stylesheets/HelpStylesheet_AA.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. ">Setting the Link Rate</h2>
-        <h2>Setting the Link Rate</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. " MadCap:conditions="Default.Print">Setting the Link Rate</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Setting the Link Rate</h2>
         <table style="width: 100%;border-spacing: 2px 10px;margin-left: auto;margin-right: auto;">
             <col style="width: 90pt;" />
             <col />
