--- a/Content/10_Integris Main Topics/3A_2000/c2.Load Config File.htm
+++ b/Content/10_Integris Main Topics/3A_2000/c2.Load Config File.htm
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="818" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="834" MadCap:lastWidth="624">
     <head>
         <link href="../../Resources/Table Stylesheets/NoteBoxStyle01.css" rel="stylesheet" MadCap:stylesheetType="table" />
         <link href="../Resources/Stylesheets/HelpStylesheet_AA.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. ">Loading a Configuration File</h2>
-        <h2>Loading a Configuration File</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. " MadCap:conditions="Default.Print">Loading a Configuration File</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Loading a Configuration File</h2>
         <table style="width: 100%;border-spacing: 2px 10px;margin-left: auto;margin-right: auto;">
             <col style="width: 15%;" />
             <col />
@@ -40,10 +40,10 @@
         </table>
         <p>Radio Head testing is accomplished by transmitting a test sequence that is matched to the equipment being tested. These tests are defined by a configuration file.</p>
         <p>To load a configuration file, click on the <b>Test Config</b> icon at top center of the main screen. Select the required configuration file from the list. <MadCap:xref href="#SelConf" class="ListOfPageNumber">(See  Fig 1.1 )</MadCap:xref></p>
-        <p>
+        <p MadCap:conditions="Default.Print">
             <MadCap:xref href="x3.Config File descriptions.htm" class="IndexPageNumber">See "Configuration Files", page 1 for more information on configuration files </MadCap:xref>
         </p>
-        <p>Click here for more information on <MadCap:xref href="x3.Config File descriptions.htm">Configuration Files</MadCap:xref></p>
+        <p MadCap:conditions="Default.Screen">Click here for more information on <MadCap:xref href="x3.Config File descriptions.htm">Configuration Files</MadCap:xref></p>
         <table style="width: 100%;margin-left: 0;margin-right: auto;mc-table-style: url('../../Resources/Table Stylesheets/NoteBoxStyle01.css');" class="TableStyle-NoteBoxStyle01" cellspacing="0">
             <col class="TableStyle-NoteBoxStyle01-Column-Column1" />
             <tbody>
