Commit of file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/01_Introduction Topics/b.Regulatory.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/02_Safety & Compliance/a.Legal.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/02_Safety & Compliance/b.Regulatory.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/02_Safety & Compliance/c.Safety & Compliance.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/02_Safety & Compliance/d.Environmental.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/02_Safety & Compliance/f.Tech Support & Calibration.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/02_Safety & Compliance/h.Unpacking & Setting Up.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/02_Safety & Compliance/h2.Setting Up.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/02_Safety & Compliance/i.Operating.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/02_Safety & Compliance/x.App1-Troubleshooting.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/10_Integris Main Topics/3A_2000/b2.Starting & Closing Integris 2000.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/10_Integris Main Topics/3A_2000/b2.Starting Integris 2000.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/10_Inte

--- a/Content/10_Integris Main Topics/3A_2000/b4.Troubleshooting.htm
+++ b/Content/10_Integris Main Topics/3A_2000/b4.Troubleshooting.htm
@@ -48,7 +48,7 @@
             Openning the <i>TEST</i> menu and selecting <b>SELECT&#160;TEST</b>. Then click on the <b>RADIO</b>&#160;option. </li>
             <li>Now click on <b>RUN</b> from the same menu (or press the <b>F5</b> key),
                 
-                <p><MadCap:conditionalText MadCap:conditions="Default.Print">(<MadCap:xref href="d1.Tests-RRH.htm" class="IndexPageNumber">See "Testing a Remote Radio Head", page 1</MadCap:xref>)</MadCap:conditionalText><MadCap:conditionalText MadCap:conditions="Default.Screen"><MadCap:conditionalText>(See also <MadCap:xref href="d1.Tests-RRH.htm">Testing a Remote Radio Head</MadCap:xref>)</MadCap:conditionalText></MadCap:conditionalText></p> <![CDATA[ ]]></li>
+                <p><MadCap:conditionalText MadCap:conditions="Default.Print">(<MadCap:xref href="d.Tests-RRH.htm" class="IndexPageNumber">See "Testing a Remote Radio Head", page 1</MadCap:xref>)</MadCap:conditionalText><MadCap:conditionalText MadCap:conditions="Default.Screen"><MadCap:conditionalText>(See also <MadCap:xref href="d.Tests-RRH.htm">Testing a Remote Radio Head</MadCap:xref>)</MadCap:conditionalText></MadCap:conditionalText></p> <![CDATA[ ]]></li>
         </ol>
         <table style="width: 100%;margin-left: 0;margin-right: auto;mc-table-style: url('../../Resources/Table Stylesheets/Image&amp;LabelStyle01.css');" class="TableStyle-Image_&amp;_LabelStyle01" cellspacing="0">
             <col class="TableStyle-Image_&amp;_LabelStyle01-Column-Column1" />
