--- a/Content/10_Integris Main Topics/3A_2000/c4.Reset.htm
+++ b/Content/10_Integris Main Topics/3A_2000/c4.Reset.htm
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="512" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="528" MadCap:lastWidth="624">
     <head>
         <link href="../../Resources/Table Stylesheets/Image&amp;LabelStyle01.css" rel="stylesheet" MadCap:stylesheetType="table" />
         <link href="../Resources/Stylesheets/HelpStylesheet_AA.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. ">Resetting Integris to Default Settings</h2>
-        <h2>Resetting Integris to Default Settings</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. " MadCap:conditions="Default.Print">Resetting Integris to Default Settings</h2>
+        <h2 class="AA_Online_H2">Resetting Integris to Default Settings</h2>
         <table style="width: 100%;border-spacing: 2px 10px;margin-left: auto;margin-right: auto;">
             <col style="width: 90pt;" />
             <col />
@@ -34,7 +34,7 @@
             </tbody>
         </table>
         <p>It is sometimes easier to reset an application to its defaults than work through a number of configuration settings.</p>
-        <p>To reset Integris 2000 to default settings select the <i>SYSTEM</i> menu, and click on <b>Reset</b>.</p>
+        <p>To reset Integris 2000 to default settings select the <b>SYSTEM</b> menu, and click on <b>Reset</b>.</p>
         <p>A warning will be displayed to ensure your current configuration is not accidentally lost.</p>
         <table style="width: 100%;margin-left: 0;margin-right: auto;mc-table-style: url('../../Resources/Table Stylesheets/Image&amp;LabelStyle01.css');" class="TableStyle-Image_&amp;_LabelStyle01" cellspacing="0">
             <col class="TableStyle-Image_&amp;_LabelStyle01-Column-Column1" />
