--- a/Content/10_Integris Main Topics/3A_2000/e.Tests-Cable.htm
+++ b/Content/10_Integris Main Topics/3A_2000/e.Tests-Cable.htm
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="755" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="771" MadCap:lastWidth="624">
     <head>
         <link href="../../Resources/Table Stylesheets/Image&amp;LabelStyle01.css" rel="stylesheet" MadCap:stylesheetType="table" />
         <link href="../Resources/Stylesheets/HelpStylesheet_AA.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. ">Testing a Cable</h2>
-        <h2>Testing a Cable</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. " MadCap:conditions="Default.Print">Testing a Cable</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Testing a Cable</h2>
         <table style="width: 100%;border-spacing: 2px 10px;margin-left: auto;margin-right: auto;">
             <col style="width: 90pt;" />
             <col />
@@ -33,7 +33,7 @@
                 </tr>
             </tbody>
         </table>
-        <p>Integris 2000 can run a sequence of tests to check the integrity of a cable connected to the test port. Tests include those for continuity, cable length and any losses in the cable.</p>
+        <p>Integris 2000 can run a sequence of tests to check the integrity of the cable and connectors connected to the test port. Tests include those for continuity, cable length and any losses in the cable.</p>
         <table style="width: 100%; margin-left: 0; margin-right: auto;">
             <col />
             <tbody>
