--- a/Content/10_Integris Main Topics/3A_2000/h.Monitor.htm
+++ b/Content/10_Integris Main Topics/3A_2000/h.Monitor.htm
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="10" MadCap:lastHeight="811" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="10" MadCap:lastHeight="827" MadCap:lastWidth="624">
     <head>
         <link href="../../Resources/Table Stylesheets/NoteBoxStyle01.css" rel="stylesheet" MadCap:stylesheetType="table" />
         <link href="../Resources/Stylesheets/HelpStylesheet_AA.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. ">Monitor Mode</h2>
-        <h2>Monitor Mode</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. " MadCap:conditions="Default.Print">Monitor Mode</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Monitor Mode</h2>
         <table style="width: 100%;border-spacing: 2px 10px;margin-left: auto;margin-right: auto;">
             <col style="width: 90pt;" />
             <col />
@@ -61,7 +61,7 @@
             <tbody>
                 <tr class="TableStyle-NoteBoxStyle01-Body-Body1">
                     <td class="TableStyle-NoteBoxStyle01-BodyA-Column1-Body1">
-                        <p><b>Note:</b> Unlike the other tests, monitoring will continue until you click on the STOP button or disable monitoring. If you stop then restart monitoring, all values will be reset. <![CDATA[                ]]></p>
+                        <p><b>Note:</b> Unlike the other tests, monitoring will continue until you click on the <b>STOP</b> button or disable monitoring. If you stop then restart monitoring, all values will be reset.                 </p>
                     </td>
                 </tr>
             </tbody>
