--- a/Content/10_Integris Main Topics/3A_2000/b2.Starting & Closing Integris 2000.htm
+++ b/Content/10_Integris Main Topics/3A_2000/b2.Starting & Closing Integris 2000.htm
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="648" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="835" MadCap:lastWidth="624">
     <head>
         <link href="../../Resources/Table Stylesheets/NoteBoxStyle01.css" rel="stylesheet" MadCap:stylesheetType="table" />
     </head>
@@ -34,5 +34,38 @@
                 </tr>
             </tbody>
         </table>
+        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.2. " MadCap:conditions="Default.Print">Closing the Integris 2000 Application</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Closing the Integris 2000 Application</h2>
+        <table style="width: 100%;border-spacing: 2px 10px;margin-left: auto;margin-right: auto;">
+            <col style="width: 120px;">
+            </col>
+            <col>
+            </col>
+            <tbody>
+                <tr>
+                    <td><b style="font-size: 11pt;">Location</b>
+                    </td>
+                    <td style="font-size: 10pt;">&#160;</td>
+                </tr>
+                <tr>
+                    <td style="font-size: 10pt">GUI or Keyboard</td>
+                    <td style="font-size: 10pt;">
+                        <p> Click on white <b style="font-size: 11pt;">X</b> at top right of the Integris 2000 window or press Alt+F4 keys</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="font-size: 10pt;">Classic menu</td>
+                    <td style="font-size: 10pt;"><b>System &gt; Exit</b>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="font-size: 10pt">Modern menu
+                    </td>
+                    <td style="font-size: 10pt;"><b>System &gt; Exit</b>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <p>You can close the Integris 2000 application by either clicking the white <b style="font-size: 11pt;">X</b> at top right of the Integris main window, or opening the <i>System</i> menu and clicking on <b>Exit</b>. The Integris system will return to the Windows desktop.</p>
     </body>
 </html>
