--- a/Content/10_Integris Main Topics/3A_2000/c3.PhysicalLayerInfo.htm
+++ b/Content/10_Integris Main Topics/3A_2000/c3.PhysicalLayerInfo.htm
@@ -7,8 +7,8 @@
         <link href="../Resources/Stylesheets/HelpStylesheet_AA.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. ">Viewing Physical Layer Information</h2>
-        <h2>Viewing Physical Layer Information</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. " MadCap:conditions="Default.Print">Viewing Physical Layer Information</h2>
+        <h2 MadCap:conditions="Default.Screen">Viewing Physical Layer Information</h2>
         <table style="width: 100%;border-spacing: 2px 10px;margin-left: auto;margin-right: auto;">
             <col style="width: 90pt;" />
             <col />
@@ -44,7 +44,7 @@
             <tbody>
                 <tr class="TableStyle-NoteBoxStyle01-Body-Body1">
                     <td class="TableStyle-NoteBoxStyle01-BodyA-Column1-Body1">
-                        <p><b>Note:</b> Do not confuse SFP sometimes referred to in link status reports with the SFP information in radio tests. </p>
+                        <p><b>Note:</b> Do not confuse the SFP referred to in link status reports with the SFP information in radio tests. </p>
                         <ul>
                             <li>The SFP referred to in some link state error messages relates to the SFP <b>fitted 
 							into Integris test port 1</b></li>
@@ -77,7 +77,7 @@
                 </tr>
                 <tr class="TableStyle-Image_&amp;_LabelStyle01-Body-Body1">
                     <td class="TableStyle-Image_&amp;_LabelStyle01-BodyA-Column1-Body1">
-                        <p class="FigNum01" MadCap:autonum=" Fig 1.1 ">SFP&#160;Information</p>
+                        <p class="FigNum01" MadCap:autonum=" Fig 1.1 ">RRH SFP&#160;Information</p>
                     </td>
                 </tr>
             </tbody>
