--- a/Content/10_Integris Main Topics/3A_2000/d1.Tests-RRH.htm
+++ b/Content/10_Integris Main Topics/3A_2000/d1.Tests-RRH.htm
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="789" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="830" MadCap:lastWidth="624">
     <head>
         <link href="../../Resources/Table Stylesheets/ShadedRowStyle01.css" rel="stylesheet" MadCap:stylesheetType="table" />
         <link href="../../Resources/Table Stylesheets/InfoBoxStyle01.css" rel="stylesheet" MadCap:stylesheetType="table" />
@@ -7,8 +7,8 @@
         <link href="../Resources/Stylesheets/HelpStylesheet_AA.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. " MadCap:conditions="Default.Print">Testing a Remote Radio Head</h2>
-        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Testing a Remote Radio Head</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. ">Testing a Remote Radio Head</h2>
+        <h2>Testing a Remote Radio Head</h2>
         <table style="width: 100%;border-spacing: 2px 10px;margin-left: auto;margin-right: auto;">
             <col style="width: 90pt;" />
             <col />
