--- a/Content/10_Integris Main Topics/3A_2000/f.Tests-SFP.htm
+++ b/Content/10_Integris Main Topics/3A_2000/f.Tests-SFP.htm
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="742" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="758" MadCap:lastWidth="624">
     <head>
         <link href="../Resources/Stylesheets/HelpStylesheet_AA.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. ">Testing an SFP</h2>
-        <h2>Testing an SFP</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. " MadCap:conditions="Default.Print">Testing an SFP</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Testing an SFP</h2>
         <table style="width: 100%;border-spacing: 2px 10px;margin-left: auto;margin-right: auto;">
             <col style="width: 90pt;" />
             <col />
@@ -92,7 +92,11 @@
                 </tr>
             </tbody>
         </table>
-        <p>When the test sequence has been completed you can optionally save the test results by adding them to a report. To add to an existing or new report file, click on the yellow <b>Add To Report</b> button.(See '<i>Working with Test Result Files</i>').</p>
+        <p>When the test sequence has been completed you can optionally save the test results by adding them to a report. To add to an existing or new report file, click on the yellow <b>Add To Report</b> button.</p>
         <p>You can now choose a name for the test results, or you can accept the default name based on the date and time of the test. Once you have finished editing the results name, click on <b>OK</b>.</p>
+        <p MadCap:conditions="Default.Print">
+            <MadCap:xref href="i.Reports.htm" class="IndexPageNumber">(See also "Working with Test Reports", page 1</MadCap:xref>)</p>
+        <p MadCap:conditions="Default.Screen">(See also <MadCap:xref href="i.Reports.htm">Working with Test Reports</MadCap:xref>)</p>
+        <p>&#160;</p>
     </body>
 </html>
