Commit of file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/01_Introduction Topics/b.Safety & Compliance.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/01_Introduction Topics/Copy of a1.UG_Legal.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/01_Introduction Topics/e2.Operating the System.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/01_Introduction Topics/h.FS_Operating.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/10_Integris Main Topics/4A_3000/4.Integris_3000.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/1A_Powering Up/a.System Setup.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/1A_Powering Up/b.Power Up.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Project/Targets/FS_User_Guide-EOL.fltar file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Project/Targets/Website Output.fltar file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Project/TOCs/eBook_PDF_UG.fltoc file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Project/TOCs/FS_User_Guide (EOL).fltoc file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Project/TOCs/RL_User_Guide.fltoc file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Project/TOCs/Viewer_PDF_UG.fltoc

--- a/Content/10_Integris Main Topics/4A_3000/4.Integris_3000.htm
+++ b/Content/10_Integris Main Topics/4A_3000/4.Integris_3000.htm
@@ -3,8 +3,8 @@
     <head>
     </head>
     <body>
-        <h1 class="AA_Chpt_Heading1" MadCap:autonum="1. ">Integris 3000</h1>
-        <h2 class="AA_Online_H2">Integris 3000</h2>
+        <h1 class="AA_Chpt_Heading1" MadCap:autonum="1. " MadCap:conditions="Default.Print">Integris 3000</h1>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Integris 3000</h2>
         <p>This section explains how to set up the <i>Integris 3000</i> and connect it to the network. It shows the location and use of the connections along with details of how to start and use the system.</p>
         <p>Integris 3000 is a 'digital' spectrum analyzer that displays power spectrum, persistence and/or waterfall graphs derived from the IQ data carried over a CPRI link.</p>
         <p>Additional functions include RF capture and export, real-time calculation of Error Vector Magnitude (EVM), Signal to Noise Ratio (SNR); and remote control for interference hunting and collaboration.</p>
