Delete of file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/20_2000/b2.Starting Integris 2000.htm

--- a/Content/02_Safety & Compliance/x.App1-Troubleshooting.htm
+++ b/Content/02_Safety & Compliance/x.App1-Troubleshooting.htm
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="3805" MadCap:lastWidth="1196">
-    <head>&#160;</head>
+    <head>
+        <link href="../Resources/Stylesheets/AA_styles.css" rel="stylesheet" type="text/css" />
+    </head>
     <body>
         <h1 class="AA_h1_Appendix" MadCap:autonum="Appendix A: ">Troubleshooting</h1>
         <h2>Troubleshooting</h2>
